# jargone

./: .gitignore  README.md  compose.yaml
chrome_extension/: README.md  background.js  contentScript.js  manifest.json  popup.html  popup.js  style.css
qdrant/qdrant_data/: raft_state.json
server/: .cursorrules  .env.test  Dockerfile  main.py  pyproject.toml  service.py
server/app/: dictionary.csv  main.py  run.sh
server/app/data/: __init__.py  relational.py  sql_client.py  vector.py
server/app/ingestion/: __init__.py  doc.py
server/app/ner/: NamedEntityExtraction.py  __init__.py
server/app/rag/: context.json  embedder.py  fill_qdrant_db.py  mock_rag.py  rag.py
server/data/: relational.py  vector.py
server/docs/: mock_communication.md  project_description.md
server/ingestion/: __init__.py
server/rag/: __init__.py
server/scripts/: save_document.py
server/scripts/texts/: api.html.txt  community-updates-#release-history.html.txt  dev-contributing-.html.txt  user-advanced.html.txt  user-quickstart.html.txt
server/services/: __init__.py  mock_llm.py
server/tests/: conftest.py  test_doc.py  test_postgresql.py  test_vector_db.py  unit_ners.py
server/tests/tests_rag/: test_context.json  test_rag.py
tests/: db.py
