[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "sqlalchemy>=2.0.0",
    "fastapi[standard]",
    "pytest>=8.3.5",
    "tiktoken>=0.9.0",
    "openai>=1.73.0",
    "spacy>=3.8.5",
    "qdrant-client>=1.13.3",
    "uvicorn>=0.30.0",
    "spacy-download>=1.1.0",
]
